Added preliminary blacklisting api to the groovy DSL